--- a/minting/package.json
+++ b/minting/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://DenisKuivalainen.github.io/eth-test-task-1",
   "name": "minting",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "axios": "^0.25.0",
+    "gh-pages": "^3.2.3",
     "openzeppelin-solidity": "^4.4.2",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
@@ -21,7 +23,8 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "pretty": "prettier -w ."
+    "pretty": "prettier -w .",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
