--- a/minting/package.json
+++ b/minting/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://DenisKuivalainen.github.io/eth-test-task-1",
   "name": "minting",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "vercel": "^23.1.2",
     "web-vitals": "^2.1.3",
     "web3": "^1.7.0"
   },
@@ -23,8 +23,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "pretty": "prettier -w .",
-    "deploy": "gh-pages -d build"
+    "pretty": "prettier -w ."
   },
   "eslintConfig": {
     "extends": [
