--- a/minting/package.json
+++ b/minting/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://DenisKuivalainen.github.io/eth-test-task-1",
   "name": "minting",
   "version": "0.1.0",
   "private": true,
@@ -23,7 +24,8 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "pretty": "prettier -w ."
+    "pretty": "prettier -w .",
+    "deploy": "react-app-rewired build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
